[package]
name = "ore-refined"
version = "0.1.0"
edition = "2024"


[features]
default = ["dev"]
prod = []
dev = []




[dependencies]
solana-account-decoder = "^2.1"
solana-nostd-keccak = "0.1.3"
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
ore-api = { path = "../ore/api" }

steel = { features = ["spl"], version = "4.0.2" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.99"
bincode = "1.3.3"
serde_json = "1.0.143"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
log = "0.4.27"
rand = "0.8.5"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
eyre = "0.6.12"
constant = "0.2.0"
tokio-tungstenite = "0.20.1"
clap = { version = "4.5.48", features = ["derive"] }
solana-transaction-status = "3.0.3"


[patch.crates-io]
meteora-pools-sdk = { git = "https://github.com/regolith-labs/meteora-pools-sdk", branch = "master" }
meteora-vault-sdk = { git = "https://github.com/regolith-labs/meteora-vault-sdk", branch = "master" }