[package]
name = "ore-test2-optimized"
version = "2.0.0"
edition = "2021"

[features]
default = []

[dependencies]
# Solana 核心依赖
solana-account-decoder = "^2.1"
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
solana-transaction-status = "3.0.3"

# SPL Token
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }

# ORE API - 使用 Git 仓库
ore-api = { git = "https://github.com/regolith-labs/ore", branch = "master" }

# Meteora SDK
meteora-pools-sdk = "0.1"
meteora-vault-sdk = "0.1"

# 工具库
steel = { version = "4.0.2", features = ["spl"] }
anchor-lang = "0.31.1"
anchor-client = { version = "0.31.1", features = ["async"] }

# 异步运行时
tokio = { version = "1.36", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# 日志
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.27"

# 错误处理
anyhow = "1.0.99"
eyre = "0.6.12"

# 命令行参数
clap = { version = "4.5.48", features = ["derive"] }

# 其他
rand = "0.8.5"
futures-util = "0.3.31"
tokio-tungstenite = "0.20.1"

# OpenSSL - Windows 编译支持
# 使用 vendored 特性自动编译 OpenSSL，解决 Windows 依赖问题
openssl = { version = "0.10", features = ["vendored"] }

[patch.crates-io]
meteora-pools-sdk = { git = "https://github.com/regolith-labs/meteora-pools-sdk", branch = "master" }
meteora-vault-sdk = { git = "https://github.com/regolith-labs/meteora-vault-sdk", branch = "master" }
